# job-tracker

./: CLAUDE.md  Madrid_Companies_Full.xlsx  README.md
job-tracker/: railway.toml
job-tracker/frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json
job-tracker/frontend/app/: layout.tsx  page.tsx
job-tracker/frontend/components/: JobCard.tsx  JobsView.tsx
job-tracker/frontend/lib/: supabase.ts
job-tracker/scraper/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  run_scrape.ps1
job-tracker/scraper/config/: companies.yaml  preferences.md
job-tracker/scraper/src/: ai_filter.py  db.py  debug_one.py  diagnose.py  e2e_preview.py  e2e_small.py  email_digest.py  main.py  models.py  smoke_filter.py
job-tracker/scraper/src/scrapers/: __init__.py  acciona.py  alantra.py  base.py  bcg.py  bdo_spain.py  cegid_talentsoft.py  dc_advisory.py  ey.py  greenhouse.py  html_scraper.py  lever.py  mckinsey.py  mediobanca.py  morgan_stanley.py  oliver_wyman.py  playwright_scraper.py  pwc_spain.py  sap_successfactors.py  talentlink.py  ubs.py  workday.py
job-tracker/supabase/: schema.sql
