[project]
name = "job-tracker-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "supabase>=2.4",
    "resend>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "ollama>=0.4",
]

[project.scripts]
scrape = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
